<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/b4">
  <!--  <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="WEIGHT AND RATE CALCULATOR"
        android:background="@color/white"
        >

    </Toolbar>-->
   <!-- <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="WEIGHT AND RATE CALCULATOR"
        android:fontFamily="@font/b"
        android:textSize="23dp"
        android:layout_margin="30dp"
        android:layout_gravity="center"
        android:gravity="center">

    </TextView>-->

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="320dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        android:elevation="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/w4"
                android:layout_margin="10dp"
                android:contentDescription="@string/weight">

            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:fontFamily="@font/m"
                android:layout_gravity="center"
                android:textSize="32sp"
                android:layout_margin="10dp"
                android:gravity="center">

            </TextView>

        </LinearLayout>


    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="320dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        android:elevation="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/rate"
                android:layout_margin="10dp"
                android:contentDescription="@string/rate">
            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:fontFamily="@font/m"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="32sp"
                android:layout_margin="10dp">

            </TextView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card3"
        android:layout_width="320dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        android:elevation="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/discount"
                android:layout_margin="10dp"
                android:contentDescription="@string/rate">
            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="DISCOUNT"
                android:fontFamily="@font/m"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="32sp"
                android:layout_margin="10dp">

            </TextView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>




</LinearLayout>
</LinearLayout>