<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".rate"
    android:orientation="vertical"
    android:background="@drawable/bn5"
    android:animateLayoutChanges="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/back1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp">

        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="PRICE TO WEIGHT CALCULATOR"
            android:fontFamily="@font/m"
            android:textSize="20sp"
            android:layout_margin="30dp">

        </TextView>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_fixed_price_per_kg"
                android:layout_marginStart="30dp"
                android:textSize="19sp"
                android:fontFamily="@font/r">

            </TextView>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:shapeAppearance="@style/Cut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="20dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Example: 250/-KG"
                    android:padding="20dp"
                    android:inputType="number">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


            <!--
                        <EditText
                            android:id="@+id/ed1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/example_250_kg"
                            android:layout_margin="30dp"
                            android:padding="20dp"
                            android:fontFamily="@font/r"
                            android:inputType="number"
                            android:background="@drawable/border"
                            android:autofillHints="250">

                        </EditText>
            -->

        </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_amount_that_you_are_paying"
        android:layout_marginStart="30dp"
        android:textSize="19sp"
        android:fontFamily="@font/r">

    </TextView>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:shapeAppearance="@style/Cut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Example 75/-"
            android:padding="20dp"
            android:inputType="number">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <!--
        <EditText
            android:id="@+id/ed2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/example_75"
            android:layout_margin="30dp"
            android:padding="20dp"
            android:fontFamily="@font/r"
            android:inputType="number"
            android:background="@drawable/border"
            android:autofillHints="200">

        </EditText>
    -->
</LinearLayout>
        <Button
            android:id="@+id/cal"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:fontFamily="@font/m"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="40dp"
            android:padding="15dp"
            android:textSize="18sp">

        </Button>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardv"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_margin="20dp"
            app:cardCornerRadius="30dp"
            android:elevation="20dp"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_margin="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/weight_in_gram"
                        android:fontFamily="@font/r"
                        android:textSize="20sp">

                    </TextView>
                    <TextView
                        android:id="@+id/t1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:fontFamily="@font/r"
                        android:textSize="20sp">

                    </TextView>
                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" g"
                        android:fontFamily="@font/r"
                        android:textSize="20sp">

                    </TextView>

                </LinearLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:layout_gravity="center"
                   android:gravity="center">
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/weight_in_k_gram"
                       android:layout_margin="10dp"
                       android:fontFamily="@font/r"
                       android:textSize="20sp">

                   </TextView>
                   <TextView
                       android:id="@+id/t2"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text=""
                       android:fontFamily="@font/r"
                       android:textSize="20sp">

                   </TextView>
                   <TextView

                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text=" kg"
                       android:fontFamily="@font/r"
                       android:textSize="20sp">

                   </TextView>
               </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>




    </LinearLayout>

